Enhance the example

--- a/examples/worklist/lib/worklist/public/index.html
+++ b/examples/worklist/lib/worklist/public/index.html
@@ -60,7 +60,7 @@
             <input name="first_name" type="text" class="span3" placeholder="Firstname"/>
             <input name="last_name"  type="text" class="span3" placeholder="Lastname"/>
             <select name="process" class='span2' placeholder="Pathway">
-              <option>Radiotherapy</option>
+              <option>Treatment</option>
             </select>
             <input type="submit" class="btn span1" value="Go!" id="start-process-button"/>
             <script>
